# backend/app/routes/__init__.py
@@ -1,5 +1,4 @@
 from app.controllers.activity_controller import activity_ns
-from app.controllers.config_controller import config_ns
 from app.controllers.consumo_controller import consumo_ns
 from app.controllers.dashboard_controller import dashboard_ns
 from app.controllers.historial_controller import historial_ns
@@ -17,7 +16,6 @@ def register_routes(api):
     api.add_namespace(chat_ns, path='/api/chat')
     api.add_namespace(sensor_ns, path='/api/sensores')
     api.add_namespace(activity_ns, path='/api/actividades')
-    api.add_namespace(config_ns, path='/api/configuracion')
     api.add_namespace(user_ns, path='/api/usuarios')
     api.add_namespace(historial_ns, path='/api/historial')
     api.add_namespace(consumo_ns, path='/api/consumo')
